core/fix : fixed the friend's component visiblity issue in the home page

--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -34,5 +34,6 @@
 
 .chat-header-info h3{
   font-size : var(--font-size-xhuge);
+  color : var(--visited );
   font-weight : 600;
 }
