--- a/src/components/friend/friend.css
+++ b/src/components/friend/friend.css
@@ -41,7 +41,7 @@
 .friend.active {
   color : var(--background);
   font-weight: 900;
-  background-color : var(--accent);
+  background-color : var(--visited );
 }
 
 
